cards spacing issue fix in device, device settings, system update and smart assist pages

--- a/vtr-ui/src/app/components/pages/page-smart-assist/page-smart-assist.component.scss
+++ b/vtr-ui/src/app/components/pages/page-smart-assist/page-smart-assist.component.scss
@@ -343,3 +343,9 @@ $fontsize_xs: 1.4rem;
 	letter-spacing: 0.05rem;
 	text-transform: uppercase;
 }
+
+.help-heading {
+	font-size: $fontsize_xl2;
+	font-weight: $weight_light;
+	color: $purple_navy;
+}
